Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6058

MySQL Bug #11766693: LOG-SLOW-ADMIN-STATEMENTS AND LOG-SLOW-SLAVE-STATEMENTS NOT DISPLAYED

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.10
    • 10.1.13
    • Replication
    • None
    • 10.1.13

    Description

      revno: 4748
      committer: Mark Leith <mark.leith@oracle.com>
      branch nick: mysql-5.6
      timestamp: Sat 2013-02-09 12:10:25 +0000
      message:
        Bug #11766693: LOG-SLOW-ADMIN-STATEMENTS AND LOG-SLOW-SLAVE-STATEMENTS NOT
        DISPLAYED
       
        Added both log_slow_admin_statements and log_slow_slave_statements as server
        system variables, that can now be dynamically set at run time and are now
        available via SHOW GLOBAL VARIABLES. These behave otherwise in the same way as
        the --log-slow-admin-statements and --log-slow-slave-statements server command
        options.
       
        There is no need to restart the slave SQL thread for the value of
        log_slow_slave_statements to be picked up, as the global variable is re-read
        with each successful event applied by the SQL thread.

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              svoj Sergey Vojtovich
              Votes:
              2 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 10m
                  1d 10m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.