MDEV-6058 MySQL Bug #11766693: LOG-SLOW-ADMIN-STATEMENTS AND  LOG-SLOW-SLAVE-STATEMENTS NOT DISPLAYED.

These parameters were moved from the command line options to
        the system variables section. Treatment of the
        opt_log_slow_slave_statements changed to let the
        dynamic change of the variable.